codex-rs/core/tests/suite/snapshots/all__suite__scenarios__astra_kickoff_remote_compaction_windows.snap
---
source: core/tests/suite/scenarios.rs
expression: "context_snapshot::format_request_history_snapshot(\"Astra plans a kickoff with local and plugin skills, remotely compacts, and checks an image brief.\",\n&requests, &ContextSnapshotOptions::default().include_request_settings(),)"
---
Scenario: Astra plans a kickoff with local and plugin skills, remotely compacts, and checks an image brief.

## Window 1
Settings:
  include: ["reasoning.encrypted_content"]
  model: "gpt-6-astra"
  parallel_tool_calls: false
  prompt_cache_key: "<PROMPT_CACHE_KEY 1>"
  reasoning: {"context":"all_turns","effort":"low"}
  store: false
  stream: true
  text: {"verbosity":"low"}
  tool_choice: "auto"
-- request 1 (turn) --
00:additional_tools/developer (3; hash=06294106c512ed0d):
        - namespace/functions; hash=d6cadb0292b35e85
          - custom/exec
          - function/wait
          - function/request_user_input
          - function/request_user_input_async
        - namespace/clock: Tools for reading and waiting on time.; hash=f402e8c5e9b5e317
          - function/sleep
        - namespace/collaboration: Tools for spawning and managing sub-agents.; hash=b263e3c84ad07c37
          - function/followup_task
          - function/interrupt_agent
          - function/list_agents
          - function/send_message
          - function/spawn_agent
          - function/wait_agent
01:message/developer:
    You are Codex, an agent based on GPT-6. You and the user share one workspace, and your job is to collabo...them until their intended goal is completely handled. [hash=efa50f074efa5803]

    # When to ask the user for permission

    Use your best judgement given task context for when you really need user permission, like a competent co...ork without ending the turn to clarify with the user. [hash=ca7367e658b51388]

    User authorization and preferences persist across turns. Do not request permission again when the user h... any guidelines provided in skills or external files. [hash=911f91c92c72882c]

    <OMITTED 155 LINES; ~4935 TOKENS; hash=5573869716192298>

    - Skill naming: If a plugin contributes skills, those skill entries are prefixed with plugin_name: in the Skills list.
    - MCP naming: Plugin-provided MCP tools keep standard MCP identifiers such as mcp__server__tool; use tool provenance to tell which plugin they come from.
    - Trigger rules: If the user explicitly names a plugin, prefer capabilities associated with that plugin for that turn.
    - Relationship to capabilities: Plugins are not invoked directly. Use their underlying skills, MCP tools, and app tools to help solve the task.
    - Relevance: Determine what a plugin can help with from explicit user mention or from the plugin-associa..., MCP tools, and apps exposed elsewhere in this turn. [hash=620459a4e7b590f0]
    - Missing/blocked: If the user requests a plugin that does not have relevant callable capabilities for t..., say so briefly and continue with the best fallback. [hash=746b0469a8f6cb3e]

02:message/developer[5]:
    [01] <skills_instructions>
        ## Skills
        A skill is a set of local instructions to follow that is stored in a `SKILL.md` file. Below is the list ...ed into an absolute path using the skill roots table. [hash=ca27c3957f42502b]
        ### Skill roots
        - `r0` = `<SKILLS_ROOT>`
        - `r1` = `<PLUGINS_CACHE>/test`
        ### Available skills
        - calendar:agenda: Plan a team agenda (file: r1/calendar/local/skills/agenda/SKILL.md)
        - final-check: Review a final brief (file: r0/final-check/SKILL.md)
        - notes:summarize: Summarize team notes (file: r1/notes/local/skills/summarize/SKILL.md)
        - outline: Draft a project outline (file: r0/outline/SKILL.md)
        </skills_instructions>
    [02] <permissions instructions>
        Filesystem sandboxing defines which files can be read or written. `sandbox_mode` is `read-only`: The san... permits reading files. Network access is restricted. [hash=be7da4425f89053c]
        # Escalation Requests

        Commands are run outside the sandbox if they are approved by the user, or match an existing rule that al...hell control operators, including but not limited to: [hash=d24ebf5fa4e4b9bb]

        - Pipes: |
        - Logical operators: &&, ||
        <OMITTED 44 LINES; ~790 TOKENS; hash=3a8900343e968d61>
        NEVER provide a prefix_rule if your command uses a heredoc or herestring.

        ### Examples
        Good examples of prefixes:
        - ["npm", "run", "dev"]
        - ["gh", "pr", "check"]
        - ["cargo", "test"]
        </permissions instructions>
    [03] <collaboration_mode># Collaboration Mode: Default

        You are now in Default mode. Any previous instructions for other modes (e.g. Plan mode) are no longer active.

        Your active mode changes only when new developer instructions with a different `<collaboration_mode>...<...by themselves. Known mode names are Default and Plan. [hash=e75f6b12fc52d812]

        ## request_user_input availability

        Use the `request_user_input` tool only when it is listed in the available tools for this turn.

        Use the `request_user_input` tool only for optional questions where the answer would materially improve the quality of the work.

        If `request_user_input` returns no answers, continue with best judgment instead of asking again or treating the turn as blocked.

        Never use the `request_user_input` tool for permission requests or permission-related escalations.
        </collaboration_mode>
    [04] <usage_stats_instructions>
        Local usage analytics are available through `usage_stats`. For usage-based analysis or reflection about ...unless the user asks about official product behavior. [hash=c3bc870833af4f1f]
        </usage_stats_instructions>
    [05] <project_automation_instructions>Use durable alarm_set reminders for elapsed UTC time, active work, or a...r admission blocks.</project_automation_instructions> [hash=ad0173b74f937254]
03:message/developer:
    <multi_agent_role>You are `/root`, the primary agent in a team of agents collaborating to fulfill the user's goals.

    At the start of your turn, you are the active agent.
    You can spawn sub-agents to handle subtasks, and those sub-agents can spawn their own sub-agents.
    All agents in the team, including the agents that you can assign tasks to, are equally intelligent and capable, and have access to the same set of tools.

    You can use `spawn_agent` to create a new agent, `followup_task` to give an existing agent a new task an...message to a running agent without triggering a turn. [hash=7d40ff8b58977202]
    `send_message` calls may be read by a human, so ensure they are legible. Always put proper spaces between words and/or numbers.
    <OMITTED 17 LINES; ~246 TOKENS; hash=780031e2df907944>
    - All agents use the same current working directory.
    - As a result, edits made by one agent are immediately visible to all other agents.

    When calling `wait_agent`, prefer longer waits (minutes) to avoid busy polling.

    There are 4 available concurrency slots, meaning that up to 4 agents can be active at once, including you.

    Full-history forks (`fork_turns` omitted or `"all"`) inherit the parent model and reasoning effort and d...ne"` or a positive integer string.</multi_agent_role> [hash=c7f52e90688299ce]
04:message/developer:
    <multi_agent_mode>Any earlier instruction enabling proactive multi-agent delegation no longer applies. D...elegation, or parallel agent work.</multi_agent_mode> [hash=2b6e037067b4390c]
05:message/user[2]:
    [01] # AGENTS.md instructions for <AGENTS_DIRECTORY>

        <INSTRUCTIONS>
        Kickoff updates must name an owner and a date.
        </INSTRUCTIONS>
    [02] <environment_context>
          <cwd><CWD></cwd>
          <shell><HOST_SHELL></shell>
          <current_date><CURRENT_DATE></current_date>
          <timezone><HOST_TIMEZONE></timezone>
          <filesystem><workspace_roots><root><WORKSPACE_ROOT 1></root></workspace_roots><permission_profile type...ntry></file_system></permission_profile></filesystem> [hash=911722cc43b4c3b8]
        </environment_context>
06:message/user:
    Plan a team kickoff for Friday using $outline and $calendar:agenda.
07:message/user:
    <skill>
    <name>outline</name>
    <path><SKILLS_ROOT>/outline/SKILL.md</path>
    ---
    name: outline
    description: Draft a project outline
    ---

    List the goals and owners.

    </skill>
08:message/user:
    <skill>
    <name>calendar:agenda</name>
    <path><PLUGINS_CACHE>/test/calendar/local/skills/agenda/SKILL.md</path>
    ---
    name: agenda
    description: Plan a team agenda
    ---

    List meetings with dates and attendees.

    </skill>
09:message/developer:
    Capabilities from the `calendar` plugin:
    - Skills from this plugin are prefixed with `calendar:`.
    Use these plugin-associated capabilities to help solve the task.
-- request 2 (turn) --
10:message/assistant:
    Agenda drafted for the kickoff.
11:message/user:
    Summarize the kickoff notes with $notes:summarize.
12:message/user:
    <skill>
    <name>notes:summarize</name>
    <path><PLUGINS_CACHE>/test/notes/local/skills/summarize/SKILL.md</path>
    ---
    name: summarize
    description: Summarize team notes
    ---

    Extract decisions and action items.

    </skill>
13:message/developer:
    Capabilities from the `notes` plugin:
    - Skills from this plugin are prefixed with `notes:`.
    Use these plugin-associated capabilities to help solve the task.
-- request 3 (compaction) --
14:message/assistant:
    The team chose Friday and assigned owners.
15:compaction_trigger

## Window 2 (after request 3: input diverged at item 02)
Settings: same as window 1
-- request 4 (turn) --
00:additional_tools/developer (3; hash=06294106c512ed0d):
        - namespace/functions; hash=d6cadb0292b35e85
          - custom/exec
          - function/wait
          - function/request_user_input
          - function/request_user_input_async
        - namespace/clock: Tools for reading and waiting on time.; hash=f402e8c5e9b5e317
          - function/sleep
        - namespace/collaboration: Tools for spawning and managing sub-agents.; hash=b263e3c84ad07c37
          - function/followup_task
          - function/interrupt_agent
          - function/list_agents
          - function/send_message
          - function/spawn_agent
          - function/wait_agent
01:message/developer:
    You are Codex, an agent based on GPT-6. You and the user share one workspace, and your job is to collabo...them until their intended goal is completely handled. [hash=efa50f074efa5803]

    # When to ask the user for permission

    Use your best judgement given task context for when you really need user permission, like a competent co...ork without ending the turn to clarify with the user. [hash=ca7367e658b51388]

    User authorization and preferences persist across turns. Do not request permission again when the user h... any guidelines provided in skills or external files. [hash=911f91c92c72882c]

    <OMITTED 155 LINES; ~4935 TOKENS; hash=5573869716192298>

    - Skill naming: If a plugin contributes skills, those skill entries are prefixed with plugin_name: in the Skills list.
    - MCP naming: Plugin-provided MCP tools keep standard MCP identifiers such as mcp__server__tool; use tool provenance to tell which plugin they come from.
    - Trigger rules: If the user explicitly names a plugin, prefer capabilities associated with that plugin for that turn.
    - Relationship to capabilities: Plugins are not invoked directly. Use their underlying skills, MCP tools, and app tools to help solve the task.
    - Relevance: Determine what a plugin can help with from explicit user mention or from the plugin-associa..., MCP tools, and apps exposed elsewhere in this turn. [hash=620459a4e7b590f0]
    - Missing/blocked: If the user requests a plugin that does not have relevant callable capabilities for t..., say so briefly and continue with the best fallback. [hash=746b0469a8f6cb3e]

02:message/user:
    Plan a team kickoff for Friday using $outline and $calendar:agenda.
03:message/user:
    Summarize the kickoff notes with $notes:summarize.
04:compaction:encrypted=true; chars=26; hash=ec5e2724e6f5f641
05:message/developer[5]:
    [01] <skills_instructions>
        ## Skills
        A skill is a set of local instructions to follow that is stored in a `SKILL.md` file. Below is the list ...ed into an absolute path using the skill roots table. [hash=ca27c3957f42502b]
        ### Skill roots
        - `r0` = `<SKILLS_ROOT>`
        - `r1` = `<PLUGINS_CACHE>/test`
        ### Available skills
        - calendar:agenda: Plan a team agenda (file: r1/calendar/local/skills/agenda/SKILL.md)
        - final-check: Review a final brief (file: r0/final-check/SKILL.md)
        - notes:summarize: Summarize team notes (file: r1/notes/local/skills/summarize/SKILL.md)
        - outline: Draft a project outline (file: r0/outline/SKILL.md)
        </skills_instructions>
    [02] <permissions instructions>
        Filesystem sandboxing defines which files can be read or written. `sandbox_mode` is `read-only`: The san... permits reading files. Network access is restricted. [hash=be7da4425f89053c]
        # Escalation Requests

        Commands are run outside the sandbox if they are approved by the user, or match an existing rule that al...hell control operators, including but not limited to: [hash=d24ebf5fa4e4b9bb]

        - Pipes: |
        - Logical operators: &&, ||
        <OMITTED 44 LINES; ~790 TOKENS; hash=3a8900343e968d61>
        NEVER provide a prefix_rule if your command uses a heredoc or herestring.

        ### Examples
        Good examples of prefixes:
        - ["npm", "run", "dev"]
        - ["gh", "pr", "check"]
        - ["cargo", "test"]
        </permissions instructions>
    [03] <collaboration_mode># Collaboration Mode: Default

        You are now in Default mode. Any previous instructions for other modes (e.g. Plan mode) are no longer active.

        Your active mode changes only when new developer instructions with a different `<collaboration_mode>...<...by themselves. Known mode names are Default and Plan. [hash=e75f6b12fc52d812]

        ## request_user_input availability

        Use the `request_user_input` tool only when it is listed in the available tools for this turn.

        Use the `request_user_input` tool only for optional questions where the answer would materially improve the quality of the work.

        If `request_user_input` returns no answers, continue with best judgment instead of asking again or treating the turn as blocked.

        Never use the `request_user_input` tool for permission requests or permission-related escalations.
        </collaboration_mode>
    [04] <usage_stats_instructions>
        Local usage analytics are available through `usage_stats`. For usage-based analysis or reflection about ...unless the user asks about official product behavior. [hash=c3bc870833af4f1f]
        </usage_stats_instructions>
    [05] <project_automation_instructions>Use durable alarm_set reminders for elapsed UTC time, active work, or a...r admission blocks.</project_automation_instructions> [hash=ad0173b74f937254]
06:message/developer:
    <multi_agent_role>You are `/root`, the primary agent in a team of agents collaborating to fulfill the user's goals.

    At the start of your turn, you are the active agent.
    You can spawn sub-agents to handle subtasks, and those sub-agents can spawn their own sub-agents.
    All agents in the team, including the agents that you can assign tasks to, are equally intelligent and capable, and have access to the same set of tools.

    You can use `spawn_agent` to create a new agent, `followup_task` to give an existing agent a new task an...message to a running agent without triggering a turn. [hash=7d40ff8b58977202]
    `send_message` calls may be read by a human, so ensure they are legible. Always put proper spaces between words and/or numbers.
    <OMITTED 17 LINES; ~246 TOKENS; hash=780031e2df907944>
    - All agents use the same current working directory.
    - As a result, edits made by one agent are immediately visible to all other agents.

    When calling `wait_agent`, prefer longer waits (minutes) to avoid busy polling.

    There are 4 available concurrency slots, meaning that up to 4 agents can be active at once, including you.

    Full-history forks (`fork_turns` omitted or `"all"`) inherit the parent model and reasoning effort and d...ne"` or a positive integer string.</multi_agent_role> [hash=c7f52e90688299ce]
07:message/developer:
    <multi_agent_mode>Any earlier instruction enabling proactive multi-agent delegation no longer applies. D...elegation, or parallel agent work.</multi_agent_mode> [hash=2b6e037067b4390c]
08:message/user[2]:
    [01] # AGENTS.md instructions for <AGENTS_DIRECTORY>

        <INSTRUCTIONS>
        Kickoff updates must name an owner and a date.
        </INSTRUCTIONS>
    [02] <environment_context>
          <cwd><CWD></cwd>
          <shell><HOST_SHELL></shell>
          <current_date><CURRENT_DATE></current_date>
          <timezone><HOST_TIMEZONE></timezone>
          <filesystem><workspace_roots><root><WORKSPACE_ROOT 1></root></workspace_roots><permission_profile type...ntry></file_system></permission_profile></filesystem> [hash=911722cc43b4c3b8]
        </environment_context>
09:message/user[2]:
    [01] Check the final kickoff brief and attached sketch with $final-check and $calendar:agenda.
    [02] <input_image:image_url>
10:message/user:
    <skill>
    <name>final-check</name>
    <path><SKILLS_ROOT>/final-check/SKILL.md</path>
    ---
    name: final-check
    description: Review a final brief
    ---

    Check that the brief has an owner for every action.

    </skill>
11:message/user:
    <skill>
    <name>calendar:agenda</name>
    <path><PLUGINS_CACHE>/test/calendar/local/skills/agenda/SKILL.md</path>
    ---
    name: agenda
    description: Plan a team agenda
    ---

    List meetings with dates and attendees.

    </skill>
12:message/developer:
    Capabilities from the `calendar` plugin:
    - Skills from this plugin are prefixed with `calendar:`.
    Use these plugin-associated capabilities to help solve the task.
